--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>eCommerce Store</title>
+    <title>Decorify - Beautiful Home Decor Tapestries</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Navbar -->
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
@@ -15,7 +18,41 @@
             <li><a href="/login">Login</a></li>
         </ul>
     </nav>
-    <h1>Welcome to Our Store</h1>
-    <p>Shop the latest products!</p>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-overlay">
+            <h1>Decorify</h1>
+            <p>Add Elegance to Your Home with Our Beautiful Tapestries</p>
+            <button>Explore Collection</button>
+        </div>
+    </section>
+
+    <!-- Product Grid -->
+    <section class="products">
+        <div class="product-card">
+            <img src="img1.jpg" alt="Decorative Tapestry 1">
+            <h2>Elegant Tapestry</h2>
+            <p class="price">Rs 299</p>
+            <button>Add to Cart</button>
+        </div>
+        <div class="product-card">
+            <img src="img2.jpg" alt="Decorative Tapestry 2">
+            <h2>Charming Tapestry</h2>
+            <p class="price">Rs 499</p>
+            <button>Add to Cart</button>
+        </div>
+        <div class="product-card">
+            <img src="img3.jpg" alt="Decorative Tapestry 3">
+            <h2>Boho Tapestry</h2>
+            <p class="price">Rs 399</p>
+            <button>Add to Cart</button>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Decorify. All rights reserved.</p>
+    </footer>
 </body>
 </html>
